--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
   <header>
     <nav>
       <div class="logo-wrapper">
-        <img class="logo-sub" src="/src/inseong.png">
-        <div class="logo">ISSAC</div>
+        <div class="logo">ISAAC</div>
       </div>
       <ul>
         <li><a href="#" class="btn-fir">Home</a></li>
@@ -29,7 +28,7 @@
 
     <div class="header-content t1">
       <img class="logo-main" src="/src/inseong.png">
-      <h1>ISSAC 모의주식</h1>
+      <h1>ISAAC 모의주식</h1>
       <p>전문적인 지식 없이도 쉽고 안전하게 주식 투자를 시작하세요!</p><a href="#" class="cta-button">시작하기</a>
     </div>
   </header>
@@ -53,59 +52,10 @@
       </ul>
     </section>
     <h2 class="stock-header">주식 목록</h2>
-    <div class="company-grid t4">
-      <div class="company">
-        <img src="company1-logo.png" alt="Company 1 Logo">
-        <h3>Company 1</h3>
-        <p class="price">$50.00</p>
-      </div>
-      <div class="company">
-        <img src="company2-logo.png" alt="Company 2 Logo">
-        <h3>Company 2</h3>
-        <p class="price">$75.00</p>
-      </div>
-      <div class="company">
-        <img src="company3-logo.png" alt="Company 3 Logo">
-        <h3>Company 3</h3>
-        <p class="price">$100.00</p>
-      </div>
-      <div class="company">
-        <img src="company1-logo.png" alt="Company 1 Logo">
-        <h3>Company 1</h3>
-        <p class="price">$50.00</p>
-      </div>
-      <div class="company">
-        <img src="company2-logo.png" alt="Company 2 Logo">
-        <h3>Company 2</h3>
-        <p class="price">$75.00</p>
-      </div>
-      <div class="company">
-        <img src="company3-logo.png" alt="Company 3 Logo">
-        <h3>Company 3</h3>
-        <p class="price">$100.00</p>
-      </div>
-      <div class="company">
-        <img src="company3-logo.png" alt="Company 3 Logo">
-        <h3>Company 3</h3>
-        <p class="price">$100.00</p>
-      </div>
-      <div class="company">
-        <img src="company1-logo.png" alt="Company 1 Logo">
-        <h3>Company 1</h3>
-        <p class="price">$50.00</p>
-      </div>
-      <div class="company">
-        <img src="company2-logo.png" alt="Company 2 Logo">
-        <h3>Company 2</h3>
-        <p class="price">$75.00</p>
-      </div>
-      <div class="company">
-        <img src="company3-logo.png" alt="Company 3 Logo">
-        <h3>Company 3</h3>
-        <p class="price">$100.00</p>
-      </div>
-    </div>
+    <div class="company-grid t4"></div>
   </main>
+  <script src="/js/main.js"></script>
+  <script src="/js/stockbuilder.js"></script>
 </body>
 
 </html>
