--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         <li><a href="#" class="btn-thi">Q&A</a></li>
       </ul>
       <div class="cta">
-        <a href="#">Sign Up</a>
+        <div class="money">보유 자산: 3,000,000원</div>
       </div>
     </nav>
 
